--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "the-code-factory",
   "version": "1.0.0",
   "description": "We can't compare the IT process to factories, can we?",
+  "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html"
+    "start": "parcel"
   },
   "author": "Adam Carruthers",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "pixi.js": "^7.1.2",
+    "tweenjs": "^1.0.2"
   }
 }
