--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "1.0.0",
   "description": "We can't compare the IT process to factories, can we?",
   "source": "src/index.html",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel"
   },
   "author": "Adam Carruthers",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.8.3"
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.4.2",
+    "babel-jest": "^29.4.2",
+    "cross-env": "^7.0.3",
+    "jest": "^29.4.2",
+    "parcel": "^2.8.3",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
